Complete the article

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="profile.ba9daec7.jpg" alt="avatar">
             </div>
             <div class="noteprofileNavbar">
-                <ul >
+                <ul class="ulprofile" >
                     <li class="profileUserNavbar">
 
                     </li>
@@ -37,6 +37,7 @@
                     <li class="profileUserNavbar">
                         <p>Job: <span> Freelancer</span>
                         </p>
+
                     </li>
                     <li class="profileUserNavbar">
                         <p>Email: <span> henry@domain.com
@@ -50,6 +51,9 @@
                     </li >
                 </ul>
             </div>
+            <div  class="dowload">
+                <button class="icon site-btn">Download Cv <i class="fa fa-download" aria-hidden="true"></i></button>
+            </div>
         </div>
     </div>
       <div class="center">
@@ -59,35 +63,169 @@
                       <i class="fa-solid fa-house"></i>
                   </a>
                   <ul id="nav">
-                      <li><a href="#Resume">BẢN TÓM TẮT</a></li>
-                      <li><a href="#Danhmuc">DANH MỤC</a></li>
-                      <li><a href="Blog">BLOG</a></li>
-                      <li><a href="Lienhe">LIÊN HỆ</a></li>
+                      <li><a href="#Resume">RESUME</a></li>
+                      <li><a href="Portfolio.html">PORTFOLIO</a></li>
+                      <li><a href="blog.html">BLOG</a></li>
+                      <li><a href="Contact.html">CONTACT</a></li>
                   </ul>
               </div>
               <div class="icon">
-                  <a href="mailto:hi@tavonline.net" class="sendmail">Hire Me <i class="fa fa-paper-plane" aria-hidden="true">
+                  <a href="mailto:hi@tavonline.net" class="sendmail">Hire Me <i  class="fa fa-paper-plane" aria-hidden="true">
                   </i>
                   </a>
                   <a><i class="fa-brands fa-facebook"></i></a>
                   <a><i class="fa-brands fa-twitter"></i></a>
                   <a><i class="fa-brands fa-instagram"></i></a>
               </div>
-              <div class="Content">
-
-              </div>
 
           </div>
           <div id="Resume" >
-              <div class="section-title top_30">
-                  <span> <h2>Resume</h2> </span>  </div>
+                  <div class="Row" >
+                  <section class="noteresume">
+                      <div class="section-title-top_30">
+                          <span></span> <h2 style="padding-bottom: 20px;font-size: 20px">Resume</h2>
+                      </div>
+                      <div class="Row">
+                         <div class="working-history">
+                           <ul class="ul-of-working">
+                               <li class="lititle"   >
+                                   <i style="background-color: #ffc500; border-radius: 30px; width: 53px;margin: -16px -6px;padding: 18px 16px;" class="fa fa-suitcase" aria-hidden="true"></i>
+                               <h2 class="timeline-title">Working History</h2>
+                               </li>
+                               <li class="lihistory">
+                                   <h3 class="line-title">Art Director - Facebook Inc</h3>
+                                   <span>2010 - Present</span>
+                                   <p class="little-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                               </li>
+                               <li class="lihistory">
+                                   <h3 class="line-title">Drawing Course</h3>
+                                   <span>2003 - 2004</span>
+                                   <p class="little-text">So insisted received is occasion advanced honoured. Among ready to which up. Attacks smiling and may out assured moments man nothing outward.</p>
+                               </li>
+                               <li class="lihistory">
+                                   <h3 class="line-title">Abc High School</h3>
+                                   <span>2000 - 2003</span>
+                                   <p class="little-text">Excited him now natural saw passage offices you minuter. At by asked being court hopes. Farther so friends am to detract.</p>
+                               </li>
+                           </ul>
+                         </div>
+                          <div class="working-history">
+                              <ul class="ul-of-working">
+                                  <li class="lititle" style="border-left: 2px solid #eee;" ><i style="background-color: #ffc500; border-radius: 30px; width: 53px;margin: -16px -5px;padding: 18px 16px;" class="fa fa-graduation-cap" aria-hidden="true"></i>
+                                      <h2  class="timeline-title">Education History</h2>
+                                  </li>
+                                  <li class="lihistory">
+                                      <h3 class="line-title">Abc University of Los Angeles</h3>
+                                      <span>2004 - 2009</span>
+                                      <p class="little-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                                  </li>
+                                  <li class="lihistory">
+                                      <h3 class="line-title">Senior Designer - Google</h3>
+                                      <span>2008 - 2010</span>
+                                      <p class="little-text">So insisted received is occasion advanced honoured. Among ready to which up. Attacks smiling and may out assured moments man nothing outward.</p>
+                                  </li>
+                                  <li class="lihistory">
+                                      <h3 class="line-title">Junior Designer - Creative Shake</h3>
+                                      <span>2005 - 2008</span>
+                                      <p class="little-text">Excited him now natural saw passage offices you minuter. At by asked being court hopes. Farther so friends am to detract.</p>
+                                  </li>
+                              </ul>
+                          </div>
+                          <div>
+
+                          </div>
+
+                      </div>
+                  </section>
+                  </div>
+
           </div>
+          <div id="Danhmuc">
+              <section class="divclient">
+                  <div class="bottom_30-section-title">
+                      <span></span> <h2 style="font-size: 20px; margin-left: 15px">Clients</h2>
+                  </div>
+                  <div class="row">
+                  <div class="divimg">
+                      <div class="client">
+                          <img src="image/client-01.476776c4.jpg" alt="">
+                      </div>
+                  </div>
+                  <div class="divimg">
+                      <div class="client">
+                          <img src="image/client-02.d87a23ab.jpg" alt="">
+                      </div>
+                  </div>
+                  <div class="divimg">
+                      <div class="client">
+                          <img src="image/client-03.d69017c7.jpg" alt="">
+                      </div>
+                  </div>
+                  <div class="divimg">
+                      <div class="client">
+                  <img src="image/client-04.1e2c6375.jpg" alt="">
+                      </div>
+                  </div>
+              </div>
+              </section>
+          </div>
+            <div class="phan3">
+                <section>
+                    <div class="bottom_30-section-title" style="background-color: white; padding-bottom: 20px">
+                        <span></span> <h2 style="font-size: 20px; margin-left: 20px">Testimonials</h2>
+                        </div>
+                       <div class="row2">
+                           <div class="comment2">
+                               <div class="top-section">
+                                   <figure>
+                                       <img style="width: 40px; height: 40px; border-radius: 50%;  object-fit: cover;" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="">
+                                   </figure> <div class="name-info">
+                                   <span class="name">April M. Griffin</span>
+                                   <span class="job">Founder</span>
+                               </div>
+                               </div> <hr>
+                               <p style="color: #787878;font-size: 13px">Our logo and business card design look great. Thanks Henry</p>
+                           </div>
+                           <div class="comment2">
+                               <div class="top-section">
+                                   <figure>
+                                       <img style="width: 40px; height: 40px; border-radius: 50%;  object-fit: cover; " src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="">
+                                   </figure> <div class="name-info">
+                                   <span class="name">April M. Griffin</span>
+                                   <span class="job">Founder</span>
+                               </div>
+                               </div> <hr>
+                               <p style="color: #787878;font-size: 13px">Our logo and business card design look great. Thanks Henry</p>
+                           </div>   <div class="comment2">
+                           <div class="top-section">
+                               <figure>
+                                   <img style="width: 40px; height: 40px; border-radius: 50%;  object-fit: cover; "  src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="">
+                               </figure> <div class="name-info">
+                               <span class="name">April M. Griffin</span>
+                               <span class="job">Founder</span>
+                           </div>
+                           </div> <hr>
+                           <p style="color: #787878; font-size: 13px">Our logo and business card design look great. Thanks Henry</p>
+                       </div>
+
+                       </div>
+
+                </section>
+            </div>
+          <footer>
+              <div class="footer">
+                  <div class="col-md-4 hidden-md hidden-sm hidden-xs name">TechLead</div>
+                  <div class="col-lg-8 col-md-12 copyright">© 2017 All rights reserved. Designed by Some one</div>
+              </div>
+          </footer>
+
+
+          </div>
+
+
+
       </div>
-
-
+    </div>
 </div>
-
-
-
 </body>
 </html>
