update hover font text

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -98,6 +98,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                        <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -111,6 +114,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -126,6 +132,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -141,6 +150,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -156,6 +168,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -171,6 +186,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img  class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -186,6 +204,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
@@ -201,6 +222,9 @@
                         <div class="imgoftable ">
                             <div class="cbp-item-wrapper">
                                 <a style="text-decoration: none" href="#" class="cbp-singlePage">
+                                    <div class="test">
+                                        <i class="fa fa-clone" aria-hidden="true"></i>
+                                    </div>
                                     <figure>
                                         <img class="imgtable" src="image/z4585519189324_17325448609a85311ffc67c1e7df9dde.jpg" alt="anhmanhinh">
                                         <figcaption style="padding: 14px;">
